<?xml version="1.0"?>
<package format="3">
  <name>roarm_moveit_config</name>
  <version>0.0.1</version>
  <description>MoveIt2 config for RoArm M3</description>
  <maintainer email="you@todo.com">v1</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>moveit_ros_move_group</exec_depend>
  <exec_depend>moveit_ros_visualization</exec_depend>
  <exec_depend>moveit_kinematics</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>roarm_description</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
